sandbox/output
StringCalculatorTest.java:25: error: ';' expected
        int expected = 1
                        ^
1 error
